Fix duplication and overlap

--- a/app/components-react/windows/ManageSceneCollections.m.less
+++ b/app/components-react/windows/ManageSceneCollections.m.less
@@ -25,7 +25,7 @@
     align-items: center;
 
     img {
-      width: 45%;
+      width: 140px;
       height: auto;
       margin-left: 16px;
     }
@@ -39,6 +39,7 @@
   box-sizing: border-box;
   border: 1px solid transparent;
   margin-top: 4px;
+  width: 96%;
 
   i {
     margin-right: 4px;
